maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:55: error: recursive method ecrit needs result type
		case 1 => ecrit(x, y-1, i+1);
                          ^